--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ filelock==3.18.0
 fonttools==4.57.0
 fqdn==1.5.1
 fsspec==2025.3.2
+grad-cam==1.5.5
 h11==0.16.0
 h5py==3.13.0
 httpcore==1.0.9
@@ -96,6 +97,8 @@ nh3==0.2.21
 notebook==7.4.1
 notebook_shim==0.2.4
 numpy==2.2.5
+opencv-contrib-python==4.11.0.86
+opencv-python==4.11.0.86
 overrides==7.7.0
 packaging==25.0
 pandas==2.2.3
@@ -168,6 +171,7 @@ torchvision==0.22.0
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
+ttach==0.0.3
 twine==6.1.0
 types-python-dateutil==2.9.0.20241206
 typing-inspection==0.4.0
